# web

./: .codeclimate.yml  .codecov.yml  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml  dump.rdb  env.py  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: issue_notice.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: _reusable_add-content-to-project.yml  ci.yml  codeql-analysis.yml  label-deployment-pull-request.yml  project-add-issue.yml  project-add-pull-request.yml  python.yml
FAQPage/: apps.py  urls.py  views.py
announcements/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
announcements/migrations/: 0001_initial.py  0002_help_text_and_naming.py  0002_multilingual_content_field.py  0003_naming.py  0003_use_timezone_aware_default.py  0004_remove_announcement_fields_max_length_and_null.py
announcements/templatetags/: announcement_tags.py
announcements/tests/: test_urls.py
card/: admin.py  formfields.py  forms.py  modelfields.py  models.py  tests.py  utils.py  validators.py  views.py  widgets.py
card/migrations/: 0001_initial.py  0002_card_nullable_fields.py
card/tests/: test_modelfields.py
check_in_system/: apps.py  models.py  urls.py  views.py
checkin/: admin.py  apps.py  forms.py  local_scanner.py  models.py  tests.py  uploadhandlers.py  urls.py  views.py  widgets.py
checkin/migrations/: 0001_initial.py  0002_auto_20180118_1651.py  0002_auto_20180211_1557.py  0002_auto_20180221_1917.py  0002_auto_20180504_2004.py  0002_profile_last_checkin.py  0003_auto_20180211_1601.py  0003_auto_20180302_1829.py  0003_auto_20180830_1904.py  0003_profile_image.py  0004_auto_20180119_1725.py  0004_auto_20180211_1621.py  0004_auto_20180906_1855.py  0004_suggestskill.py  0005_auto_20180119_1812.py  0005_auto_20180307_1749.py  0006_auto_20180307_1819.py  0006_auto_20180906_1915.py  0006_profile_checked_in.py  0007_auto_20180121_1548.py  0007_auto_20180307_1907.py  0007_remove_profile_card_id.py  0008_profile_last_checkin.py  0008_remove_profile_card_id.py  0009_alter_verbose_names_and_related_names.py  0009_profile_user_non-nullable.py  0009_registerprofile.py  0010_alter_id_fields_to_use_bigautofield.py  0010_auto_20180420_1924.py  0011_alter_profile_and_skill_and_suggestskill_image_filename.py  0012_profile_user_non_nullable.py
checkin/templatetags/: checkin_tags.py
checkin/tests/: test_profile_image.py  test_urls.py
checkin/utilities/: skill_feed_context.py
contentbox/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
contentbox/migrations/: 0001_initial.py  0002_auto_20180412_1740.py  0003_auto_20181013_1418.py  0003_contentbox_content_en.py  0005_auto_20181209_1836.py  0006_permissions_name_fix.py  0007_alter_id_fields_to_use_bigautofield.py  0007_internal_contentbox_permission.py  0008_contentbox_last_modified.py  0009_internal_contentbox_permission.py  0009_rename_title_contentbox_url_name.py  0010_contentbox_title.py  0011_historicalcontentbox.py  0012_rename_title_contentbox_url_name.py  0013_contentbox_title.py
contentbox/tests/: hosts_and_internal_urls_override.py  test_urls.py  test_views.py
dataporten/: ldap_utils.py  login_handlers.py  social.py  tests.py  views.py
dataporten/tests/: test_views.py
docker/: Dockerfile  compose.dev.yaml
docs/: admin.py  converters.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
docs/migrations/: 0001_initial.py  0002_filter_page_title.py  0003_user_association.py  0004_page_current_content.py  0005_page_current_content_onetoone_and_related_names.py  0006_content_rename_changed_to_last_modified.py  0006_page_current_content_onetoone_and_related_names.py
docs/templatetags/: search_tags.py
docs/tests/: test_urls.py
faq/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
faq/migrations/: 0001_initial.py  0003_question_last_modified.py  0004_historicalquestion.py  0005_history_date_db_index.py  0006_historicalquestion_categories.py
faq/tests/: test_urls.py
groups/: __init__.py  admin.py  apps.py  committee_urls.py  models.py  signals.py  tests.py  urls.py  views.py
groups/migrations/: 0004_auto_20181009_1356.py  0005_remove_committee_clickbait_max_length.py  0006_add_related_and_verbose_names.py  0006_add_related_names.py  0007_add_related_and_verbose_names.py  0008_committee_and_inheritancegroup_last_modified.py  0009_alter_committee_image_filename.py  0009_historicalcommittee.py  0010_alter_committee_image_filename.py  0011_historicalinheritancegroup.py  (+1 more)
groups/tests/: test_admin.py  (+2 more)
internal/: __init__.py  admin.py  apps.py  formfields.py  forms.py  models.py  signals.py  tests.py  urls.py  util.py  validators.py  views.py
inventar/: apps.py
inventory/: admin.py  apps.py  models.py  urls.py  views.py
mail/: email.py  models.py
make_queue/: admin.py  apps.py  converters.py  fields.py  formfields.py  forms.py  helper.py  middleware.py  models.py  old3dprinter.txt  tests.py  urls.py  validators.py  views.py
makerspace/: admin.py  apps.py  converters.py  forms.py  models.py  tests.py  urls.py  views.py
news/: admin.py  converters.py  forms.py  ical.py  models.py  tests.py  urls.py  views.py
node/: package-lock.json  package.json  semantic.json
tools/: admin.py  converters.py  models.py  tests.py  urls.py  views.py
users/: admin.py  converters.py  models.py
util/: admin_utils.py  apps.py  auth_utils.py  ckeditor_utils.py  file_utils.py  formfields.py  html_utils.py  locale_utils.py  model_utils.py  modelfields.py  storage.py  test_utils.py  url_utils.py  validators.py  view_utils.py  views.py
web/: .local_settings.py  admin-urls.py  admin.py  admin_urls.py  apps.py  asgi.py  context_processors.py  fields.py  hosts.py  routing.py  settings.py  signals.py  static.py  tests.py  url_util.py  urls.py  views.py  widgets.py  wsgi.py
(+1301 files in other folders)
