[project]
name = "web"
requires-python = "==3.11.*"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
]
dynamic = [ "version" ]

dependencies = [
  # Django-related packages
  "Django==5.0.2",
  "django-hosts==6.0",
  "django-ckeditor==6.7.0",
  "django-cleanup==8.1.0",
  "django-constance==3.1.0",
  "django-decorator-include==3.0",
  # (See this page for a list of all management commands:
  # https://django-extensions.readthedocs.io/en/latest/command_extensions.html)
  "django-extensions==3.2.3",
  "django-ical==1.9.2",
  "django-multiselectfield==0.1.12",
  "django-phonenumber-field[phonenumbers]==8.3.0",
  "django-simple-history==3.5.0",
  "sorl-thumbnail==12.10.0",

  # Packages related to authentication and other "social" stuff
  "social-auth-app-django==5.4.1",
  # This is already a requirement of `social-auth-app-django`, but it's listed here
  # to provide the `openidconnect` extra - see
  # https://python-social-auth.readthedocs.io/en/stable/installing.html#using-the-extras-options
  "social-auth-core[openidconnect]==4.4.2",
  "python-ldap==3.4.4",

  # Async-related packages (mainly for sending of emails)
  "channels[daphne]==4.1.0",
  "channels-redis==4.2.0",

  # Misc. packages
  "bleach[css]==6.1.0",
  "Pillow==11.3.0",
  "uuid==1.30",
  "XlsxWriter==3.2.0",
]

[dependency-groups]
dev = [
  "django-debug-toolbar==6.0.0",
]
ci = [
  "coverage==7.10.6",
]

[tool.uv]
# Don't install `dev` by default (see
# https://docs.astral.sh/uv/concepts/projects/dependencies/#default-groups), to make it
# easier to *not* install those dependencies in prod
default-groups = [  ]

[tool.uv.sources]
python-ldap = [
  # Christoph Gohlke distributes pre-compiled binaries of various Python packages,
  # among others: https://github.com/cgohlke/python-ldap-build/releases.
  # The library version must match the version selected under the `dev`
  # dependency group, and the `cp3xx` version must match `requires-python`.
  # URL found at https://github.com/cgohlke/python-ldap-build/releases/tag/v3.4.4-2
  { url = "https://github.com/cgohlke/python-ldap-build/releases/download/v3.4.4-2/python_ldap-3.4.4-cp311-cp311-win_amd64.whl", marker = "sys_platform == 'win32'" },
]
